tests/NormalTests/paczka1/fuzzy1/14982561.err
Error in line 2: A679 S878 56,3
Error in line 17: aOP A679 33,1
Error in line 15: q4YVnl6X A673 794,2
Error in line 33: hXq5 S471 53,34
Error in line 37: q4YVnl6X S878 70,1
